# studying-flask-films-rest-api

./: .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  wsgi.py
app/: __init__.py  auth.py  config.py  errors.py  exceptions.py  logging.py  manage.py  middlewares.py  models.py  parsers.py
app/database/: models.py
app/database/cruds/: base.py  directors.py  films.py  genres.py
app/database/schemas/: directors.py  films.py  users.py
app/database/utils/: orm.py
app/domain/: directors.py  films.py  genres.py  utils.py
app/resources/: __init__.py  directors.py  films.py  genres.py
app/resources/models/: auth.py  directors.py  films.py  genres.py  users.py
app/resources/parsers/: films.py  (+2 more)
app/schemas/: directors.py  enums.py  films.py  genres.py  roles.py  users.py
app/utils/: db.py  decorators.py  exceptions.py  helpers.py  middlewares.py  orm.py  responses.py  validators.py
flaskr/: __init__.py  routes.py
migrations/versions/: 2da0fc81ddfd_.py  355ff51c4ae1_.py  38c610a0dd66_.py  4ae7c92ab435_.py  4ffeaf46bc50_.py  67b4bc9e1095_.py  6bf83157d19c_.py  8f82f8ec7421_.py  8fd26ae4e8de_.py  907dc34c67f2_.py  9e9731c98426_.py  a34dcd1ada2a_.py  a3f4b9333bf6_.py  bcbf997a6f97_.py  da872c68510f_.py  e21697064875_.py  f1d3fad30a7b_.py
nginx/: nginx.conf
tests/: conftest.py  seeds.py
tests/e2e/: test_auth_api.py  test_directors_api.py  test_films_api.py  test_genres_api.py  utils.py
tests/films/: test_get_films.py
tests/integration/: test_films_queries.py
tests/unit/: test_films.py
(+6 files in other folders)
