[tool.poetry]
name = "nix-flask-films-rest-api"
version = "0.1.0"
description = ""
authors = ["vladislv31 <vladislv.k31@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.1.1"
Flask-RESTful = "^0.3.9"
Flask-SQLAlchemy = "^2.5.1"
psycopg2-binary = "^2.9.3"
Flask-Migrate = "^3.1.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
